--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-                <h1 class="cursive">Magic Sandbox</h1>
+                <h1 class="cursive text-dark">Magic Sandbox</h1>
                 <h4>This page explain how to build a small, cheap and easy-to-use interactive sandbox</h4>
                 <hr>
 <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
