--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="header-content">
             <div class="inner">
                 <h1 class="cursive text-dark">Magic Sandbox</h1>
-                <h4>This page explain how to build a small, cheap and easy-to-use interactive sandbox</h4>
+                <h4 class="text-dark">This page explain how to build a small, cheap and easy-to-use interactive sandbox</h4>
                 <hr>
 <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
 <a href="#one" class="btn btn-primary btn-xl page-scroll">Let's go</a>
