--- a/index.html
+++ b/index.html
@@ -280,41 +280,31 @@
         </div>
     </aside>
     <section id="last">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="margin-top-0 wow fadeIn">Get in Touch</h2>
-                    <hr class="primary">
-                    <p>We love feedback. Fill out the form below and we'll get back to you as soon as possible.</p>
-                </div>
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/Thomwolf" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Thomwolf', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
-                    <form class="contact-form row">
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Name">
-                        </div>
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Phone">
-                        </div>
-                        <div class="col-md-12">
-                            <label></label>
-                            <textarea class="form-control" rows="9" placeholder="Your message here.."></textarea>
-                        </div>
-                        <div class="col-md-4 col-md-offset-4">
-                            <label></label>
-                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Send <i class="ion-android-arrow-forward"></i></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+      <div class="container">
+      	<div class="row">
+              <div class="span12">
+          		<div class="thumbnail center well well-small text-center">
+                      <h2>News</h2>
+                      <p>Stay tuned with Magic Sand and the sandbox (we don't send spam).</p>
+                          <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/Thomwolf" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Thomwolf', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+                            <p>
+                              <label for="tlemail">Enter your email address
+                              </label>
+                            </p>
+                            <div class="input-prepend"><span class="add-on"><i class="icon-envelope"></i></span>
+                              <input type="text" style="width:140px" name="email" id="tlemail" placeholder="your@email.com"/>
+                            </div>
+                            <br />
+                            <input type="submit" value="Subscribe" class="btn btn-large" />  
+                              <input type="hidden" value="1" name="embed"/>
+                              <input type="submit" value="Subscribe" />
+                            <p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p>
+                          </form>
+                  </div>    
+              </div>
+      	</div>
+      </div>
+</section>
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
