--- a/index.html
+++ b/index.html
@@ -280,31 +280,25 @@
         </div>
     </aside>
     <section id="last">
-      <div class="container">
-      	<div class="row">
-              <div class="span12">
-          		<div class="thumbnail center well well-small text-center">
-                      <h2>News</h2>
-                      <p>Stay tuned with Magic Sand and the sandbox (we don't send spam).</p>
-                          <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/Thomwolf" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Thomwolf', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-                            <p>
-                              <label for="tlemail">Enter your email address
-                              </label>
-                            </p>
-                            <div class="input-prepend"><span class="add-on"><i class="icon-envelope"></i></span>
-                              <input type="text" style="width:140px" name="email" id="tlemail" placeholder="your@email.com"/>
-                            </div>
-                            <br />
-                            <input type="submit" value="Subscribe" class="btn btn-large" />  
-                              <input type="hidden" value="1" name="embed"/>
-                              <input type="submit" value="Subscribe" />
-                            <p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p>
-                          </form>
-                  </div>    
-              </div>
-      	</div>
-      </div>
-</section>
+<div class="container">
+	<div class="row">
+        <div class="span12">
+    		<div class="thumbnail center well well-small text-center">
+                <h2>Newsletter</h2>
+                
+                <p>Subscribe to our weekly Newsletter and stay tuned.</p>
+                
+                <form action="" method="post">
+                    <div class="input-prepend"><span class="add-on"><i class="icon-envelope"></i></span>
+                        <input type="text" id="" name="" placeholder="your@email.com">
+                    </div>
+                    <br />
+                    <input type="submit" value="Subscribe Now!" class="btn btn-large" />
+              </form>
+            </div>    
+        </div>
+	</div>
+</div></section>
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
