--- a/_pgbackup/index_1469444373.html
+++ b/_pgbackup/index_1469444373.html
@@ -26,13 +26,19 @@
                 <div class="navbar-collapse collapse" id="bs-navbar">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a class="page-scroll" href="#one">HARDWARE</a>
+                            <a class="page-scroll" href="#one">What</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#two">SOFTWARE</a>
+                            <a class="page-scroll" href="#two">Hardware</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#three">CONTACT</a>
+                            <a class="page-scroll" href="#three">Software</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#four">Features</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#last">Contact</a>
                         </li>
                     </ul>
                     <!-- 
@@ -52,7 +58,7 @@
                     <h4 class="text-dark">This page explain how to build a small, cheap and easy-to-use interactive sandbox</h4>
                     <hr>
                     <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
-                    <a href="#one" class="btn btn-primary btn-xl page-scroll text-dark">Let's start</a>
+                    <a href="#one" class="btn btn-primary btn-xl page-scroll">Let's go</a>
                 </div>
             </div>
             <video autoplay="" loop="" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="img/Sandbox_small.jpg" id="video-background">
