--- a/_pgbackup/index_1469445031.html
+++ b/_pgbackup/index_1469445031.html
@@ -26,13 +26,19 @@
                 <div class="navbar-collapse collapse" id="bs-navbar">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a class="page-scroll" href="#one">HARDWARE</a>
+                            <a class="page-scroll" href="#one">What</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#two">SOFTWARE</a>
+                            <a class="page-scroll" href="#two">Hardware</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#three">CONTACT</a>
+                            <a class="page-scroll" href="#three">Software</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#four">Features</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#last">Contact</a>
                         </li>
                     </ul>
                     <!-- 
