Updated landing page

--- a/_pgbackup/index_1469800132.html
+++ b/_pgbackup/index_1469800132.html
@@ -12,30 +12,28 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
-        <header id="first">
+       <header id="first">
             <div class="header-content">
                 <div class="inner">
                     <h1 class="cursive text-dark">Magic Sandbox</h1>
                     <h4 class="text-dark">A small, cheap and easy-to-use interactive sandbox</h4>
                     <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
                 </div>
-                <div class="column">
-                    <h4 class="text-dark">Leave your email if you want to hear future news of the Magic Sandbox project</h4>
-                    <h4 class="text-dark">kits, developments, games, ... but no spam !</h4>
-                    <form action="https://tinyletter.com/Thomwolf" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Thomwolf', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-                        <div class="form-group col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
-                            <input type="text" class="form-control" title="No spam, we promise!" placeholder="your@email.com" name="email" id="tlemail">
-                        </div>
-                        <input type="hidden" value="1" name="embed" />
-                        <div class="form-group col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
+                     <div class="column">
+                        <h4  class="text-dark">Leave your email if you want to hear future news of the Magic Sandbox project</h4>
+                        <h4 class="text-dark">kits, developments, games, ... but no spam !</h4>
+                        <form action="https://tinyletter.com/Thomwolf" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Thomwolf', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+                            <div class="form-group col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
+                                <input type="text" class="form-control" title="No spam, we promise!" placeholder="your@email.com" name="email" id="tlemail" >
+                            </div>
+                         <input type="hidden" value="1" name="embed"/>
+                         <div class="form-group col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
                             <button class="btn btn-primary btn-xl text-dark" data-toggle="modal" type="submit" value="Subscribe">Stay updated</button>
-                        </div>
-                    </form>
-                    <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
-                        <a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a>
+                         </div>
+                        </form>
+                         <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2"><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></div>
                     </div>
-                </div>
-            </div>
+           </div>
             <video autoplay="" loop="" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="img/Sandbox_small.jpg" id="video-background">
                 <source src="img/Sandbox_small.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
             </video>
