--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header id="first">
             <div class="header-content">
                 <div class="inner">
-                    <h1 class="cursive text-dark">Magic Sandbox</h1>
+                    <h1 class="cursive text-dark"><a href="http://imgur.com/a/Q86wR">Magic Sandbox</a></h1>
                     <h4 class="text-dark">A small, cheap and easy-to-use interactive sandbox</h4>
                     <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
                 </div>
