--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-content">
                 <div class="inner">
                     <h1 class="cursive text-dark"><a href="http://imgur.com/a/Q86wR">Magic Sandbox</a></h1>
-                    <h4 class="text-dark">A small, cheap and easy-to-use interactive sandbox</h4>
+                    <h4 class="text-dark">An easy-to-use interactive sandbox for fun and learning</h4>
                     <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
                 </div>
                 <div class="column">
