--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
                 </div>
                 <div class="column">
-                    <h4 class="text-dark">Leave your email if you want to hear news of the <a href="http://imgur.com/a/Q86wR">Magic Sandbox project</a></h4>
+                    <h4 class="text-dark">Leave your email if you want to hear news from the <a href="http://imgur.com/a/Q86wR">Magic Sandbox project</a></h4>
                     <h4 class="text-dark">kits, developments, games, ... but no spam !</h4>
                     <form action="https://tinyletter.com/Thomwolf" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Thomwolf', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
                         <div class="form-group col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
