--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <header id="first">
             <div class="header-content">
                 <div class="inner">
-                    <h1 class="cursive text-dark"><a href="http://imgur.com/a/Q86wR">Magic Sandbox</a></h1>
+                    <h1 class="cursive text-dark"><a href="https://www.reddit.com/r/DIY/comments/4v1gfi/a_magic_sandbox_i_made_for_my_3_yo_sons_birthday/">Magic Sandbox</a></h1>
                     <h4 class="text-dark">An easy-to-use interactive sandbox for fun and learning</h4>
                     <!--                 <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;  -->
                 </div>
                 <div class="column">
-                    <h4 class="text-dark">Leave your email if you want to hear news from the <a href="http://imgur.com/a/Q86wR">Magic Sandbox project</a></h4>
+                    <h4 class="text-dark">Leave your email if you want to hear news from the <a href="https://www.reddit.com/r/DIY/comments/4v1gfi/a_magic_sandbox_i_made_for_my_3_yo_sons_birthday/">Magic Sandbox project</a></h4>
                     <h4 class="text-dark">kits, developments, games, ... but no spam !</h4>
                     <form action="https://tinyletter.com/Thomwolf" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/Thomwolf', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
                         <div class="form-group col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
